# youshouldprobablyleave

./: .gitignore  Cargo.toml  README.md  Rust_Wasm Warehouse App Research.txt  Trunk.toml  frontend-research.rs  index.html  styles.css
.claude/: claude.md  settings.local.json
crates/wms-core/: Cargo.toml
crates/wms-core/src/: db.rs  error.rs  lib.rs  types.rs
crates/wms-core/src/migrations/: 001_initial_schema.sql  002_inventory_tables.sql  003_shipping_tables.sql  004_delivery_tables.sql  005_crm_tables.sql  006_timesheet_tables.sql  007_sync_tables.sql
crates/wms-crm/: Cargo.toml
crates/wms-crm/src/: lib.rs  models.rs  service.rs  validation.rs
crates/wms-deliveries/: Cargo.toml
crates/wms-deliveries/src/: geofence.rs  lib.rs  models.rs  routing.rs  service.rs
crates/wms-inventory/: Cargo.toml
crates/wms-inventory/src/: forecast.rs  lib.rs  models.rs  service.rs
crates/wms-shipping/: Cargo.toml
crates/wms-shipping/src/: barcode.rs  labels.rs  lib.rs  models.rs  service.rs
crates/wms-sync/: Cargo.toml
crates/wms-sync/src/: crdt.rs  engine.rs  lib.rs  protocol.rs
crates/wms-timesheets/: Cargo.toml
crates/wms-timesheets/src/: export.rs  lib.rs  models.rs  service.rs
frontend/: Cargo.toml
frontend/src/: app.rs  lib.rs  main.rs  state.rs
frontend/src/components/: badge.rs  button.rs  card.rs  chart.rs  data_table.rs  header.rs  input.rs  loading.rs  mod.rs  modal.rs  sidebar.rs  toast.rs
frontend/src/pages/: customers.rs  dashboard.rs  deliveries.rs  inventory.rs  not_found.rs  receiving.rs  settings.rs  shipping.rs  timesheets.rs
src/: api.rs  app.rs  main.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: create_ico.py
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: crm.rs  deliveries.rs  inventory.rs  mod.rs  receiving.rs  shipping.rs  sync.rs  timesheets.rs
src/components/: badge.rs  button.rs  card.rs  chart.rs  data_table.rs  header.rs  input.rs  loading.rs  mod.rs  modal.rs  sidebar.rs  toast.rs
src/pages/: customers.rs  dashboard.rs  deliveries.rs  inventory.rs  mod.rs  not_found.rs  receiving.rs  settings.rs  shipping.rs  timesheets.rs
