[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/wms-core",
    "crates/wms-inventory",
    "crates/wms-shipping",
    "crates/wms-deliveries",
    "crates/wms-crm",
    "crates/wms-timesheets",
    "crates/wms-sync",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["WMS Team"]
license = "MIT"
repository = "https://github.com/warehouse/wms-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled", "sqlcipher"] }

# CRDTs
automerge = "0.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Barcode
rxing = "0.6"

# Route optimization
vrp-core = "1.24"
vrp-pragmatic = "1.24"

# Geospatial
geo = "0.28"

# Time series forecasting
augurs = "0.6"

# Phone validation
phonenumber = "0.3"

# PDF generation
printpdf = "0.7"

# Excel/CSV export
rust_xlsxwriter = "0.79"
csv = "1.3"

# gRPC
tonic = "0.12"
prost = "0.13"

# ZPL label generation
zpl = "0.1"

