[package]
name = "wms-frontend"
version = "0.1.0"
edition = "2024"
description = "WMS Frontend built with Leptos"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
uuid = { version = "1.11", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

