[package]
name = "wms-app"
version.workspace = true
edition = "2024"
description = "Rust-Native Warehouse Management System"
authors.workspace = true
license.workspace = true

[lib]
name = "wms_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-barcode-scanner = "2.0"
tauri-plugin-biometric = "2.0"
tauri-plugin-geolocation = "2.0"
tauri-plugin-network = "2.0"
tauri-plugin-blec = "0.1"

# Workspace crates
wms-core = { path = "../crates/wms-core" }
wms-inventory = { path = "../crates/wms-inventory" }
wms-shipping = { path = "../crates/wms-shipping" }
wms-deliveries = { path = "../crates/wms-deliveries" }
wms-crm = { path = "../crates/wms-crm" }
wms-timesheets = { path = "../crates/wms-timesheets" }
wms-sync = { path = "../crates/wms-sync" }

# Common dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

