[package]
name = "wms-core"
version.workspace = true
edition = "2024"
description = "Core utilities and database layer for WMS"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
validator.workspace = true

