[package]
name = "wms-shipping"
version.workspace = true
edition = "2024"
description = "Shipping and receiving module with barcode scanning and label printing"

[dependencies]
wms-core = { path = "../wms-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
rxing.workspace = true
printpdf.workspace = true

