[package]
name = "wms-sync"
version.workspace = true
edition = "2024"
description = "Synchronization engine with CRDT support for WMS"

[dependencies]
wms-core = { path = "../wms-core" }
automerge.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tonic.workspace = true
prost.workspace = true
futures.workspace = true

