[package]
name = "wms-timesheets"
version.workspace = true
edition = "2024"
description = "Timesheet and workforce management module"

[dependencies]
wms-core = { path = "../wms-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
rust_xlsxwriter.workspace = true
csv.workspace = true
base64 = "0.22"

